[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/cutscenes/FlourCutscene.gd" type="Script" id=1]
[ext_resource path="res://assets/player/dead.png" type="Texture" id=2]
[ext_resource path="res://src/BloodSplaterComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/player/falling.png" type="Texture" id=4]
[ext_resource path="res://assets/background/background_large.png" type="Texture" id=5]
[ext_resource path="res://src/FlourParticle.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/background/ground.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 548.943, 42.4055 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18.6245, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 304.281, 4.84888 )

[node name="FlourCutscene" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 515, -561.011 )
scale = Vector2( 1.64289, 1 )
texture = ExtResource( 5 )

[node name="ground" type="Sprite" parent="."]
position = Vector2( 529.419, 563.478 )
scale = Vector2( 1.08239, 0.349748 )
texture = ExtResource( 7 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 482.995, 496.556 )
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 9.77991, 35.2078 )
shape = SubResource( 1 )

[node name="BloodSplaterComponent" parent="." instance=ExtResource( 3 )]
position = Vector2( 527.352, 471.251 )
BloodParticleScene = ExtResource( 6 )
RandomVelocity = 200.0

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( 519.192, 37.2104 )
gravity_scale = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 526.824, 311.622 )
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 507.205, 487.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.355988, -3.55478 )
shape = SubResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
